Build improvements and modernization