@@ -1,6 +1,7 @@
 package org.semispace.admin;
 
 import org.junit.jupiter.api.Test;
+import org.semispace.JacksonSerializer;
 import org.semispace.SemiSpaceInterface;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -10,7 +11,7 @@ public class TerraAdminTest {
     @Test
     public void testPerformInitializationAsMaster() {
         SemiSpaceInterface ts = new JunitSpace();
-        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts, null);
+        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts, new JacksonSerializer());
         assertNotNull(admin);
         admin.performInitialization();
         // Double initialization does not give error(s)
@@ -24,14 +25,14 @@ public class TerraAdminTest {
         SemiSpaceInterface ts = new JunitSpace();
         IdentifyAdminQuery iaq = new IdentifyAdminQuery();
         iaq.amIAdmin = Boolean.TRUE;
-        iaq.id = new Integer(1);
+        iaq.id = Integer.valueOf(1);
         iaq.hasAnswered = Boolean.TRUE;
         ts.write(iaq, 1000);
 
         TimeQuery tq = new TimeQuery();
         tq.isFinished = Boolean.TRUE;
 
-        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts, null);
+        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts, new JacksonSerializer());
         admin.performInitialization();
         assertFalse(admin.isMaster());
 
